--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5",
         "vimeo/psalm": "^3.16",
-        "mockery/mockery": "^1.3"
+        "mockery/mockery": "^1.3",
+        "php-coveralls/php-coveralls": "^2.3"
     },
     "autoload": {
         "classmap": [
@@ -37,13 +38,15 @@
             "@cs-check",
             "@analyze",
             "@test-build",
-            "@test"
+            "@test-coverage"
         ],
         "analyze": "psalm --output-format=console --find-dead-code --show-info=false",
         "set-baseline": "psalm --find-dead-code --set-baseline=psalm-baseline.xml",
         "cs-check": "phpcs",
         "cs-fix": "phpcbf",
         "test-build": "codecept build",
-        "test": "codecept --colors run -v"
+        "test": "codecept --colors run -v",
+        "test-coverage": "codecept --colors run -v --coverage-xml clover.xml",
+        "cp-clover": "cp ./tests/_output/clover.xml ./clover.xml"
     }
 }
