remove php8 once more

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ php:
     - 7.2
     - 7.3
     - 7.4
-    - 8.0
+
+before_install:
+    - phpenv config-rm xdebug.ini || true
 
 install:
     - if [[ "$DEPS" = 'high' ]]; then travis_retry composer --no-interaction --no-suggest update; fi
