Move everything to Fkupper namespace

--- a/psalm.xml.dist
+++ b/psalm.xml.dist
@@ -7,6 +7,6 @@
     errorBaseline="psalm-baseline.xml"
 >
     <projectFiles>
-        <directory name="src"/>
+        <directory name="src/Fkupper/Codeception"/>
     </projectFiles>
 </psalm>
