--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,13 @@ install:
 script: composer check
 
 env:
+    global:
+        - XDEBUG_MODE=coverage
     matrix:
         - DEPS=low
         - DEPS=high
         - DEPS=stable
+        
 cache:
     directories:
         - $(composer config cache-files-dir)
