--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -31,8 +31,8 @@ jobs:
 
     - name: Run tests
       env:
-        COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        COVERALLS_FLAG_NAME: run-${{ matrix.php }}
+        COVERALLS_REPO_TOKEN: ${{ secrets.github_token }}
+        COVERALLS_FLAG_NAME: php-${{ matrix.php }}
         COVERALLS_PARALLEL: true
       run: composer check
 
