--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,14 @@
     ],
     "minimum-stability": "RC",
     "require": {
-        "php": "^7.4 || ^8.0",
-        "codeception/codeception": "^4.0",
-        "codeception/module-asserts": "^1.0.0"
+        "php": "^8.0",
+        "codeception/codeception": "^4.1"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.5",
-        "vimeo/psalm": "^3.16",
-        "mockery/mockery": "^1.3",
-        "php-coveralls/php-coveralls": "^2.3"
+        "squizlabs/php_codesniffer": "^3.7",
+        "vimeo/psalm": "^4.27",
+        "mockery/mockery": "^1.5",
+        "php-coveralls/php-coveralls": "^2.5"
     },
     "autoload": {
         "classmap": [
