--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -11,14 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: ['8.0', '8.1']
-        codeception: ['4.1', '5.0']
+        php: ['8.0', '8.1', '8.2']
+        codeception: ['5.0']
 
     steps:
-    - name: checkout
+    - name: Checkout
       uses: actions/checkout@v2
 
-    - name: setup php
+    - name: Setup php
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php }}
