--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
     ],
     "minimum-stability": "RC",
     "require": {
-        "php": "^8.0|^8.1",
-        "codeception/codeception": "^4.1|^5.0"
+        "php": "^8.0.|^8.1|^8.2",
+        "codeception/codeception": "^5.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7",
